Fix typo in checkContent method for content validation